no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-16 10:02:28 25.10.16
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-10-16 10:39:58 25.10.16
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-10-20 08:48:05 25.10.20
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2025-10-20 10:05:15 25.10.20
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2025-10-22 13:08:41 25.10.22
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-10-22 13:52:26 25.10.22
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-10-23 09:31:09 25.10.23
no todo: tcp selective ack
---------------------------------- 2025-10-23 11:44:27 25.10.23
qc pass: ppp over rlogin
qc pass: ppp over tcp without sack
---------------------------------- 2025-10-23 12:19:25 25.10.23
qc pass: ppp over tcp with sack
qc pass: ppp over tcp with asymmetric sack
qc pass: ppp over tcp with ecn
qc pass: ppp over tcp without ecn
qc pass: ppp over tcp with timestamp
qc pass: ppp over tcp without timestamp
---------------------------------- 2025-10-23 14:50:01 25.10.23
qc pass: ppp over tcp with winscale
qc pass: ppp over tcp without winscale
---------------------------------- 2025-11-02 11:34:59 25.11.2
no todo: mpls inband performance measurement
no todo: ioam as rfc9452
---------------------------------- 2025-11-02 12:10:00 25.11.2
qc pass: ldp with entropy label
qc pass: ldp with alternate marking
---------------------------------- 2025-11-05 16:12:20 25.11.5
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports