@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.11.5-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-11-05 16:32:34, took 00:20:13, with 50 workers, on 4066 cases, 1 failed, 0 traces, 11 retries
+-;-;-;2025-11-05 18:09:36, took 00:14:05, with 50 workers, on 4066 cases, 0 failed, 0 traces, 8 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1075,7 +1075,7 @@ http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;succe
 http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
 http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
-http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;#6-run-r1 tping 100 10 2.2.2.2 vrf v1;wireguard over asymmetric ports
+http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
 http://sources.freertr.org/cfg/demo01.tst;demo01.tst;success;empty demo network
 http://sources.freertr.org/cfg/demo02.tst;demo02.tst;success;addressed demo network
 http://sources.freertr.org/cfg/intop1-bgp01.tst;intop1-bgp01.tst;success;interop1: ebgp
