@@ -17636,3 +17636,6 @@ qc pass: ldp with alternate marking
 ---------------------------------- 2025-11-05 16:12:20 25.11.5
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-11-05 17:55:31 25.11.5
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
